--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+v<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -64,12 +64,12 @@
     <section id="quienes" class="section">
       <h2>¿Quiénes Somos?</h2>
       <div class="quienes-content">
-        <p><b>Tramas Escucha a Víctimas de Violencia, A.C.</b> es una asociación civil dedicada a brindar apoyo, escucha, información y acompañamiento a personas afectadas por la violencia en México. Nuestro equipo está conformado por profesionales y voluntarios comprometidos con la transformación social y el bienestar de las víctimas.</p>
+        <p><b>Tramas Escucha a Víctimas de Violencia, A.C.</b> es una asociación civil dedicada a brindar apoyo, escucha, información y acompañamiento a personas afectadas por la violencia en México. Nuestro equipo está conformado por profesionales y voluntarios comprometidos con la transformación social.</p>
       </div>
     </section>
   </main>
   <footer>
-    <p>&copy; 2025 Tramas Escucha a Víctimas de Violencia, A.C. | contacto@tramas.org</p>
+    <p>&copy; 2025 Tramas Escucha a Víctimas de Violencia, A.C. | contacto@tramasevv.org</p>
   </footer>
   <script src="main.js"></script>
 </body>
