--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-v<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -29,23 +29,8 @@ v<!DOCTYPE html>
     </section>
     <section id="publicaciones" class="section">
       <h2>Publicaciones</h2>
+      <button id="add-publication">Agregar Publicación</button>
       <div id="todas-publicaciones" class="card-list">
-        <div class="card">
-          <strong>Guía de apoyo emocional</strong>
-          <p>Recomendaciones para el autocuidado y la salud mental.</p>
-        </div>
-        <div class="card">
-          <strong>Derechos de las víctimas</strong>
-          <p>Información sobre derechos y acceso a la justicia.</p>
-        </div>
-        <div class="card">
-          <strong>Red de apoyo</strong>
-          <p>Contactos y organizaciones aliadas en tu zona.</p>
-        </div>
-        <div class="card">
-          <strong>Cómo pedir ayuda</strong>
-          <p>Pasos y recomendaciones para buscar apoyo seguro.</p>
-        </div>
       </div>
     </section>
     <section id="donativos" class="section">
@@ -64,7 +49,7 @@ v<!DOCTYPE html>
     <section id="quienes" class="section">
       <h2>¿Quiénes Somos?</h2>
       <div class="quienes-content">
-        <p><b>Tramas Escucha a Víctimas de Violencia, A.C.</b> es una asociación civil dedicada a brindar apoyo, escucha, información y acompañamiento a personas afectadas por la violencia en México. Nuestro equipo está conformado por profesionales y voluntarios comprometidos con la transformación social.</p>
+        <p><b>Tramas Escucha a Víctimas de Violencia, A.C.</b> es una asociación civil dedicada a brindar apoyo, escucha, información y acompañamiento a personas afectadas por la violencia en Méx[...]
       </div>
     </section>
   </main>
